Backend auskorrigiert (POST für Benutzer) und API von localhost:3000 in frontend hilfsanzeigen eingebunden (nur für GET-Anfragen)
